@@ -7,14 +7,17 @@ import tn.esprit.spring.persistence.entities.Evenement;
 import tn.esprit.spring.persistence.entities.Logistique;
 import tn.esprit.spring.persistence.entities.Participant;
 
-import java.util.stream.Collectors;
-
 public class EntityMapper {
+
+    // Private constructor to hide the implicit public one
+    private EntityMapper() {
+        throw new IllegalStateException("Utility class");
+    }
 
     public static ParticipantDTO toDTO(Participant participant) {
         if (participant == null) return null;
         return new ParticipantDTO(
-                participant.getIdPart(),  // Changed from getId()
+                participant.getIdPart(),
                 participant.getNom(),
                 participant.getPrenom(),
                 participant.getTache()
@@ -24,7 +27,7 @@ public class EntityMapper {
     public static Participant toEntity(ParticipantDTO dto) {
         if (dto == null) return null;
         Participant participant = new Participant();
-        participant.setIdPart(dto.getId());  // Changed from setId()
+        participant.setIdPart(dto.getId());
         participant.setNom(dto.getNom());
         participant.setPrenom(dto.getPrenom());
         participant.setTache(dto.getTache());
@@ -39,9 +42,9 @@ public class EntityMapper {
                 evenement.getDated(),
                 evenement.getCout(),
                 evenement.getParticipants() != null ?
-                        evenement.getParticipants().stream().map(Participant::getIdPart).collect(Collectors.toList()) : null,  // Changed from getId()
+                        evenement.getParticipants().stream().map(Participant::getIdPart).toList() : null,
                 evenement.getLogistiques() != null ?
-                        evenement.getLogistiques().stream().map(Logistique::getIdlog).collect(Collectors.toList()) : null  // Changed from getId()
+                        evenement.getLogistiques().stream().map(Logistique::getIdlog).toList() : null
         );
     }
 
@@ -58,10 +61,10 @@ public class EntityMapper {
     public static LogistiqueDTO toDTO(Logistique logistique) {
         if (logistique == null) return null;
         return new LogistiqueDTO(
-                logistique.getIdlog(),  // Changed from getId()
+                logistique.getIdlog(),
                 logistique.getDescription(),
                 logistique.isReserve(),
-                logistique.getPrix(),  // Changed from getPrixUnit()
+                logistique.getPrix(),
                 logistique.getQuantite()
         );
     }
@@ -69,10 +72,10 @@ public class EntityMapper {
     public static Logistique toEntity(LogistiqueDTO dto) {
         if (dto == null) return null;
         Logistique logistique = new Logistique();
-        logistique.setIdlog(dto.getId());  // Changed from setId()
+        logistique.setIdlog(dto.getId());
         logistique.setDescription(dto.getDescription());
         logistique.setReserve(dto.isReserve());
-        logistique.setPrix(dto.getPrixUnit());  // Changed from setPrixUnit()
+        logistique.setPrix(dto.getPrixUnit());
         logistique.setQuantite(dto.getQuantite());
         return logistique;
     }
